fixed flex wrap

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ a {
   width: 80vw;
   top: 5rem;
   position: relative;
+  flex-wrap: wrap;
 }
 .header_container h1 {
   font-size: 1rem;
